--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "mongoose": "^8.4.3",
+    "next": "^14.2.4",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.2.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
