--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
@@ -18,6 +19,7 @@
     "eslint-config-next": "13.4.19",
     "mongoose": "^8.4.3",
     "next": "^14.2.4",
+    "next-themes": "^0.3.0",
     "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
