--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.5",
+    "embla-carousel-react": "^8.1.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "mongoose": "^8.4.3",
