--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "jsx": "react",
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
     }
